# ocaml-sodium

./: .bazelignore  .gitignore  README.md  WORKSPACE.bazel  WORKSPACE.bzl  user.bazelrc
bzl/: opam.bzl
bzl/tools/: user.bazelrc
lib/: BUILD.bazel
lib_gen/: BUILD.bazel
lib_test/: BUILD.bazel
